refactor: small rework

--- a/src/mini_transformer_model.ipynb
+++ b/src/mini_transformer_model.ipynb
@@ -39,10 +39,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8be4be49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original:  Hello, world!\n",
+      "Encoded:   [3, 5, 6, 6, 7, 2, 0, 9, 7, 8, 6, 4, 1]\n",
+      "Decoded:   Hello, world!\n",
+      "Vocab size: 10\n",
+      "Dataset length: 9\n",
+      "\n",
+      "First sample:\n",
+      "Input:  tensor([3, 5, 6, 6])\n",
+      "Target: tensor([5, 6, 6, 7])\n",
+      "Input text:  'Hell'\n",
+      "Target text: 'ello'\n",
+      "Test passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Download the dataset if not present\n",
     "data_path = Path('../data/shakespeare.txt')\n",
@@ -55,7 +74,10 @@
     "        f.write(text)\n",
     "else:\n",
     "    with open(data_path, 'r') as f:\n",
-    "        text = f.read()"
+    "        text = f.read()\n",
+    "\n",
+    "dataset = CharDataset(text, block_size=128)\n",
+    "my_tests.test_tokenizer_roundtrip()"
    ]
   },
   {
@@ -69,29 +91,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2efe0f29",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original:  Hello, world!\n",
-      "Encoded:   [3, 5, 6, 6, 7, 2, 0, 9, 7, 8, 6, 4, 1]\n",
-      "Decoded:   Hello, world!\n",
-      "Vocab size: 10\n",
-      "Test passed!\n"
-     ]
-    }
-   ],
-   "source": [
-    "dataset = CharDataset(text, block_size=128)\n",
-    "my_tests.test_tokenizer_roundtrip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "f1c0f21b",
    "metadata": {},
    "outputs": [],
