feat: add single attention head

--- a/src/mini_transformer_model.ipynb
+++ b/src/mini_transformer_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c3fa6a4c",
    "metadata": {},
    "outputs": [
@@ -23,6 +23,7 @@
     "from pathlib import Path\n",
     "import requests\n",
     "from my_tokenizer import CharDataset\n",
+    "from my_head import Head\n",
     "import my_tests\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
