--- a/src/mini_transformer_model.ipynb
+++ b/src/mini_transformer_model.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "b63f0100",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "c3fa6a4c",
    "metadata": {},
    "outputs": [
@@ -40,30 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8be4be49",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing tokenizer encoding / decoding \n",
-      "Original:  Hello, world!\n",
-      "Encoded:   [3, 5, 6, 6, 7, 2, 0, 9, 7, 8, 6, 4, 1]\n",
-      "Decoded:   Hello, world!\n",
-      "Vocab size: 10\n",
-      "Dataset length: 9\n",
-      "\n",
-      "First sample:\n",
-      "Input:  tensor([3, 5, 6, 6])\n",
-      "Target: tensor([5, 6, 6, 7])\n",
-      "Input text:  'Hell'\n",
-      "Target text: 'ello'\n",
-      "Test passed!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download the dataset if not present\n",
     "data_path = Path('../data/shakespeare.txt')\n",
@@ -78,8 +69,7 @@
     "    with open(data_path, 'r') as f:\n",
     "        text = f.read()\n",
     "\n",
-    "dataset = CharDataset(text, block_size=128)\n",
-    "my_tests.test_tokenizer_roundtrip()"
+    "dataset = CharDataset(text, block_size=128)"
    ]
   },
   {
@@ -92,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "f1c0f21b",
    "metadata": {},
    "outputs": [],
@@ -106,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a0e5f51c",
    "metadata": {},
    "outputs": [
@@ -117,42 +107,33 @@
       "Testing single attention Head with head size 16\n",
       "Input shape:  torch.Size([4, 8, 64])\n",
       "Output shape: torch.Size([4, 8, 16])\n",
-      "Single attention head works\n"
+      "Causal masking verified\n",
+      "Single attention head works\n",
+      "\n",
+      "Testing Multi-Head Attention with head size 16 and num heads 4\n",
+      "Shape preserved: torch.Size([4, 8, 64]) to torch.Size([4, 8, 64])\n",
+      "No NaN values\n",
+      "Output changes with different input\n",
+      "Projection: 64 to 64\n",
+      "Causal masking verified\n",
+      "Multi-head attention works!\n",
+      "\n",
+      "Testing Feed-Forward Network...\n",
+      "Shape preserved: torch.Size([4, 8, 32]) to torch.Size([4, 8, 32])\n",
+      "No NaN values\n",
+      "Output changes with different input\n",
+      "Internal structure: 32 to 128 to 32\n",
+      "Position-wise independence verified\n",
+      "Feed-forward network works!\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "my_tests.test_single_attention_head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4113d2dd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing Multi-Head Attention with head size 16 and num heads 4\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "The size of tensor a (64) must match the size of tensor b (16) at non-singleton dimension 2",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mmy_tests\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtest_multi_attention_head\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/git/mini_project_language_model/src/my_tests.py:105\u001b[39m, in \u001b[36mtest_multi_attention_head\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    103\u001b[39m single_head = Head(head_size=head_size, n_embd=embed_dim, block_size=block_size, dropout=dropout)\n\u001b[32m    104\u001b[39m single_output = single_head(x)\n\u001b[32m--> \u001b[39m\u001b[32m105\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mallclose\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msingle_output\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43matol\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m1e-3\u001b[39;49m\u001b[43m)\u001b[49m, \u001b[33m\"\u001b[39m\u001b[33mMulti-head same as single head!\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    107\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m✅ Multi-head attention works!\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mRuntimeError\u001b[39m: The size of tensor a (64) must match the size of tensor b (16) at non-singleton dimension 2"
-     ]
-    }
-   ],
-   "source": [
-    "my_tests.test_multi_attention_head()"
+    "my_tests.test_single_attention_head()\n",
+    "my_tests.test_multi_attention_head()\n",
+    "my_tests.test_ffn()\n",
+    "my_tests.test_transformer_block()"
    ]
   }
  ],
