feat: added full model

--- a/src/mini_transformer_model.ipynb
+++ b/src/mini_transformer_model.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "f1c0f21b",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,11 @@
       "Internal structure: 32 to 128 to 32\n",
       "Position-wise independence verified\n",
       "Feed-forward network works!\n",
-      "\n"
+      "\n",
+      "Testing Transformer Block...\n",
+      "Shape preserved: torch.Size([4, 8, 32]) to torch.Size([4, 8, 32])\n",
+      "No NaN values\n",
+      "Transformer block works\n"
      ]
     }
    ],
@@ -133,7 +137,8 @@
     "my_tests.test_single_attention_head()\n",
     "my_tests.test_multi_attention_head()\n",
     "my_tests.test_ffn()\n",
-    "my_tests.test_transformer_block()"
+    "my_tests.test_transformer_block()\n",
+    "test_full_model"
    ]
   }
  ],
